Fleshed out from the start of model ch to end of H core terms.

--- a/chapter-1.tex
+++ b/chapter-1.tex
@@ -1,4 +1,6 @@
-Programming language interoperation is the cooperation of software components written in different languages.  Components cooperate by exchanging data across a boundary between languages.  The boundary converts data from a form understandable by the sending language to a form understandable by the receiving language.  A form of boundary, called an interface bridge, is a two-way map between languages of client and server components.  A set of n interoperable languages requires $n\times(n-1)$ maps to interoperate.
+\chapter{Introduction}
+
+Programming language interoperation is the cooperation of software components written in different languages.  Components cooperate by exchanging data across a boundary between languages.  The boundary converts data from a form understandable by the sending language to a form understandable by the receiving language.  A form of boundary, called an interface bridge, is a two-way map between languages of client and server components.  A set of $n$ interoperable languages requires $n\times(n-1)$ maps to interoperate.
 
 Language incompatibilities can arise when components exchange data.  One such incompatibility is type systems.  Static type systems check the types of terms at compile time to determine if a type error can occur during run time.  If an error is detected, a program is prevented from being compiled.  In this way static type systems guarantee that no type errors will occur at run time, so there is no need to perform type checks at run time.  Dynamic type systems do not check the types of terms at compile time.  Instead, they insert code that checks types at run time to detect type errors and terminate the computation if one arises.
 
