--- a/thesis.tex
+++ b/thesis.tex
@@ -93,14 +93,8 @@
 
 % Begin content
 
-\chapter{Model}
-
-\input{ht.tex}
-\input{htr.tex}
-\input{hos.tex}
-\input{st.tex}
-\input{str.tex}
-\input{sos.tex}
+\input{chapter-1.tex}
+\input{chapter-2.tex}
 
 % End content
 
