--- a/model/hcos.tex
+++ b/model/hcos.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{hcos}
+\caption{Haskell core operational semantics}
 \onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
@@ -15,6 +17,4 @@ $\mathscr{E}[\mathtt{tl}$ $\mathtt{nil}^{T}]_{H}$ & $\rightarrow$ & $\mathscr{E}
 $\mathscr{E}[\mathtt{fix}$ $(\lambda x:T.e_{H})]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}[(\mathtt{fix}$ $(\lambda x:T.e_{H}))/x]]$
 \end{tabular}
 \end{center}
-\caption{Haskell core operational semantics}
-\label{fig:hcos}
 \end{figure}
