--- a/model/hios.tex
+++ b/model/hios.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{hios}
+\caption{Haskell interoperation operational semantics}
 \onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
@@ -46,6 +48,4 @@ $\mathscr{E}[^{T^{a}}HS$ $v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T^{a}}HS$
 && ($v_{S}\neq SH^{T^{a}}$ $e_{H}$)
 \end{tabular}
 \end{center}
-\caption{Haskell interoperation operational semantics}
-\label{fig:hios}
 \end{figure}
