--- a/model/hit.tex
+++ b/model/hit.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{hit}
+\caption{Haskell interoperation terms}
 \begin{center}
 \begin{tabular}{lcl}
 $e_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $e_{M}$ $\vert$ $^{T}HS$ $e_{S}$ \\
@@ -8,6 +10,4 @@ $a$ & $=$ & Type labels (a, b, \ldots) \\
 $E_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $E_{M}$ $\vert$ $^{T}HS$ $E_{S}$
 \end{tabular}
 \end{center}
-\caption{Haskell interoperation terms}
-\label{fig:hit}
 \end{figure}
