--- a/model/mcos.tex
+++ b/model/mcos.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{mcos}
+\caption{ML core operational semantics}
 \onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
@@ -15,6 +17,4 @@ $\mathscr{E}[\mathtt{tl}$ $\mathtt{nil}^{T}]_{M}$ & $\rightarrow$ & $\mathscr{E}
 $\mathscr{E}[\mathtt{fix}$ $(\lambda x:T.e_{M})]_{M}$ & $\rightarrow$ & $\mathscr{E}[e_{M}[(\mathtt{fix}$ $(\lambda x:T.e_{M}))/x]]$
 \end{tabular}
 \end{center}
-\caption{ML core operational semantics}
-\label{fig:mcos}
 \end{figure}
