--- a/model/mct.tex
+++ b/model/mct.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{mct}
+\caption{ML core terms}
 \onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
@@ -14,6 +16,4 @@ $E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\ver
 && $\vert$ $\mathtt{cons}$ $E_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $v_{M}$ $E_{M}$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $E_{M}$ $\vert$ $f$ $E_{M}$ $\vert$ $\mathtt{fix}$ $E_{M}$
 \end{tabular}
 \end{center}
-\caption{ML core terms}
-\label{fig:mct}
 \end{figure}
