--- a/model/mios.tex
+++ b/model/mios.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{mios}
+\caption{ML interoperation operational semantics}
 \onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
@@ -46,6 +48,4 @@ $\mathscr{E}[^{T^{a}}MS$ $v_{S}]_{M}$ & $\rightarrow$ & $\mathscr{E}[^{T^{a}}MS$
 && ($v_{S}\neq SM^{T^{a}}$ $v_{M}$)
 \end{tabular}
 \end{center}
-\caption{ML interoperation operational semantics}
-\label{fig:mios}
 \end{figure}
