--- a/model/mit.tex
+++ b/model/mit.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{mit}
+\caption{ML interoperation terms}
 \begin{center}
 \begin{tabular}{lcl}
 $e_{M}$ & $=$ & $\cdots$ $\vert$ $^{T}MH^{T}$ $e_{H}$ $\vert$ $^{T}MS$ $e_{S}$ \\
@@ -8,6 +10,4 @@ $a$ & $=$ & Type labels (a, b, \ldots) \\
 $E_{M}$ & $=$ & $\cdots$ $\vert$ $^{T}MH^{T}$ $E_{H}$ $\vert$ $^{T}MS$ $E_{S}$
 \end{tabular}
 \end{center}
-\caption{ML interoperation terms}
-\label{fig:mit}
 \end{figure}
