--- a/model/scos.tex
+++ b/model/scos.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{scos}
+\caption{Scheme core operational semantics}
 \onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
@@ -26,6 +28,4 @@ $\mathscr{E}[\mathtt{proc?}$ $v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overli
 $\mathscr{E}[\mathtt{wrong}$ $\mathrm{string}]_{S}$ & $\rightarrow$ & \textbf{Error}: string
 \end{tabular}
 \end{center}
-\caption{Scheme core operational semantics}
-\label{fig:scos}
 \end{figure}
