--- a/model/sct.tex
+++ b/model/sct.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{sct}
+\caption{Scheme core terms}
 \onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
@@ -12,6 +14,4 @@ $E_{S}$ & $=$ & $[\,]_{S}$ $\vert$ $E_{S}$ $e_{S}$ $\vert$ $v_{S}$ $E_{S}$ $\ver
 && $\vert$ $o$ $E_{S}$ $e_{S}$ $\vert$ $o$ $v_{S}$ $E_{S}$ $\vert$ $f$ $E_{S}\vert$ $p$ $E_{S}$
 \end{tabular}
 \end{center}
-\caption{Scheme core terms}
-\label{fig:sct}
 \end{figure}
