--- a/model/sios.tex
+++ b/model/sios.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{sios}
+\caption{Scheme interoperation operational semantics}
 \onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
@@ -20,6 +22,4 @@ $\mathscr{E}[SH^{L}$ $(^{L}HS$ $v_{S})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S
 $\mathscr{E}[SM^{L}$ $(^{L}MS$ $v_{S})]_{S}$ & $\rightarrow$ & $\mathscr{E}[v_{S}]$
 \end{tabular}
 \end{center}
-\caption{Scheme interoperation operational semantics}
-\label{fig:sios}
 \end{figure}
