--- a/model/sit.tex
+++ b/model/sit.tex
@@ -1,4 +1,6 @@
 \begin{figure}
+\label{sit}
+\caption{Scheme interoperation terms}
 \begin{center}
 \begin{tabular}{lcl}
 $e_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $e_{H}$ $\vert$ $SM^{T}$ $e_{M}$ \\
@@ -6,6 +8,4 @@ $v_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\
 $E_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $E_{H}$ $\vert$ $SM^{T}$ $E_{M}$
 \end{tabular}
 \end{center}
-\caption{Scheme interoperation terms}
-\label{fig:sit}
 \end{figure}
