Finished ch 2 core.  Incorporated the proof into ch 3.  Made various corrections to prev ch 2 material.

--- a/model/hcos.tex
+++ b/model/hcos.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \label{hcos}
 \caption{Haskell core operational semantics}
-\onehalfspacing
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
 $\mathscr{E}[(\lambda x:T.e_{H}^{1})$ $e_{H}^{2}]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}^{1}[e_{H}^{2}/x]]$ \\
