--- a/model/mcos.tex
+++ b/model/mcos.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \label{mcos}
 \caption{ML core operational semantics}
-\onehalfspacing
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
 $\mathscr{E}[(\lambda x:T.e_{M})$ $v_{M}]_{M}$ & $\rightarrow$ & $\mathscr{E}[e_{M}[v_{M}/x]]$ \\
