--- a/model/scos.tex
+++ b/model/scos.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \label{scos}
 \caption{Scheme core operational semantics}
-\onehalfspacing
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
 $\mathscr{E}[(\lambda x.e_{S})$ $v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}[v_{S}/s]]$ \\
