--- a/proof/lemmas/progress/canonical-forms.tex
+++ b/proof/lemmas/progress/canonical-forms.tex
@@ -1,6 +1,6 @@
 \begin{lemma}
 \label{cf}
-\onehalfspacing
+%\onehalfspacing
 The possible syntactic forms of values of various types.
 \begin{enumerate}
 \item If $v_{A}:N$ then $v_{A}=\overline{n}$ where $A\in\lbrace H,M\rbrace$.
