--- a/proof/lemmas/progress/inversion.tex
+++ b/proof/lemmas/progress/inversion.tex
@@ -1,6 +1,6 @@
 \begin{lemma}
 \label{i}
-\onehalfspacing
+%\onehalfspacing
 The type of a term of each syntactic form can be calculated from the types of its subterms.
 \begin{enumerate}
 \item If $\Gamma\vdash_{A}x:T$ then $x:T_{1}\in\Gamma$ and $T=T_{1}$ where $A\in\lbrace H,M\rbrace$.
