--- a/proof/lemmas/progress/uniqueness-of-types.tex
+++ b/proof/lemmas/progress/uniqueness-of-types.tex
@@ -1,6 +1,6 @@
 \begin{lemma}
 \label{uot}
-\onehalfspacing
+%\onehalfspacing
 $e_{A}$ has at most one type $T$ for a given context $\Gamma$ where $A\in\lbrace H,M\rbrace$.
 \begin{proof}
 By structural induction on $e_{A}$ using inversion (Lemma \ref{i}).
