--- a/model/mct.tex
+++ b/model/mct.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \label{mct}
 \caption{ML core terms}
-\onehalfspacing
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
 $e_{M}$ & $=$ & $x$ $\vert$ $v_{M}$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ \\
