--- a/model/sct.tex
+++ b/model/sct.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \label{sct}
 \caption{Scheme core terms}
-\onehalfspacing
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
 $e_{S}$ & $=$ & $x$ $\vert$ $v_{S}$ $\vert$ $e_{S}$ $e_{S}$ $\vert$ $\mathtt{if0}$ $e_{S}$ $e_{S}$ $e_{S}$ $\vert$ $\mathtt{cons}$ $e_{S}$ $e_{S}$ $\vert$ $o$ $e_{S}$ $e_{S}$ $\vert$ $f$ $e_{S}$ $\vert$ $p$ $e_{S}$ $\vert$ $\mathtt{wrong}$ $\mathrm{string}$ \\
