--- a/proof/lemmas/preservation/type-substitution.tex
+++ b/proof/lemmas/preservation/type-substitution.tex
@@ -1,6 +1,6 @@
 \begin{lemma}
 \label{tes}
-\onehalfspacing
+%\onehalfspacing
 If $\Gamma,X\vdash_{A}e_{A}:T_{1}$ and $\vdash_{A}T_{2}$ then $\Gamma\vdash_{A}e_{A}[T_{2}/X]:T_{1}[T_{2}/X]$ where $A\in\lbrace H,M\rbrace$.
 \begin{proof}
 By structural induction.
