--- a/proof/theorems/progress.tex
+++ b/proof/theorems/progress.tex
@@ -1,35 +1,35 @@
 \begin{theorem}
 \label{ps}
-\onehalfspacing
+%\onehalfspacing
 If $\vdash_{A}e_{A}:T$ then $e_{A}$ is a value or $e_{A}\rightarrow e_{A}'$ or $e_{A}\rightarrow$ \emph{\textbf{Error}:\;string} where $A\in\lbrace H,M,S\rbrace$.
 \begin{proof}
 By structural induction on $e_{A}$.
-\input{cases/progress/variable.tex}
-\input{cases/progress/number.tex}
-\input{cases/progress/term-abstraction-hm.tex}
-\input{cases/progress/term-abstraction-s.tex}
-\input{cases/progress/type-abstraction.tex}
-\input{cases/progress/cons-e-h.tex}
-\input{cases/progress/cons-v-ms.tex}
-\input{cases/progress/nil-hm.tex}
-\input{cases/progress/nil-s.tex}
-\input{cases/progress/term-application-h.tex}
-\input{cases/progress/term-application-m.tex}
-\input{cases/progress/term-application-s.tex}
-\input{cases/progress/type-application.tex}
-\input{cases/progress/if-hm.tex}
-\input{cases/progress/if-s.tex}
-\input{cases/progress/cons-e-ms.tex}
-\input{cases/progress/arithmetic-hm.tex}
-\input{cases/progress/arithmetic-s.tex}
-\input{cases/progress/field-h.tex}
-\input{cases/progress/field-m.tex}
-\input{cases/progress/field-s.tex}
-\input{cases/progress/fix.tex}
-\input{cases/progress/predicate.tex}
-\input{cases/progress/wrong.tex}
-\input{cases/progress/ab.tex}
-\input{cases/progress/as.tex}
-\input{cases/progress/sa.tex}
+\input{proof/cases/progress/variable.tex}
+\input{proof/cases/progress/number.tex}
+\input{proof/cases/progress/term-abstraction-hm.tex}
+\input{proof/cases/progress/term-abstraction-s.tex}
+\input{proof/cases/progress/type-abstraction.tex}
+\input{proof/cases/progress/cons-e-h.tex}
+\input{proof/cases/progress/cons-v-ms.tex}
+\input{proof/cases/progress/nil-hm.tex}
+\input{proof/cases/progress/nil-s.tex}
+\input{proof/cases/progress/term-application-h.tex}
+\input{proof/cases/progress/term-application-m.tex}
+\input{proof/cases/progress/term-application-s.tex}
+\input{proof/cases/progress/type-application.tex}
+\input{proof/cases/progress/if-hm.tex}
+\input{proof/cases/progress/if-s.tex}
+\input{proof/cases/progress/cons-e-ms.tex}
+\input{proof/cases/progress/arithmetic-hm.tex}
+\input{proof/cases/progress/arithmetic-s.tex}
+\input{proof/cases/progress/field-h.tex}
+\input{proof/cases/progress/field-m.tex}
+\input{proof/cases/progress/field-s.tex}
+\input{proof/cases/progress/fix.tex}
+\input{proof/cases/progress/predicate.tex}
+\input{proof/cases/progress/wrong.tex}
+\input{proof/cases/progress/ab.tex}
+\input{proof/cases/progress/as.tex}
+\input{proof/cases/progress/sa.tex}
 \end{proof}
 \end{theorem}
